--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       name="description"
       content="hardware para PC, componentes de PC, tienda de hardware, comprar hardware online, tarjetas gráficas, procesadores para PC, discos SSD, memoria RAM, placas base, fuentes de poder, periféricos gaming, ensamblaje de PC, repuestos para computadoras, hardware de alto rendimiento"
     />
-    <link rel="icon" type="image/svg+xml" href="https://trello.com/1/cards/67d80f377ad55dc4df25d044/attachments/67db49fcdc4671324f82034a/download/Favicon_sin_fondo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./public/favicon.png" />
     <title>HardTech</title>
   </head>
   <body>
